examples/test/testpolicy14213.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14213
  namespace: namespace157
spec:
  podSelector:
    matchLabels:
      key17: value23
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key5: value29
      podSelector:
        matchLabels:
          key9: value42
          key45: value44
          key8: value18
